# miden-research

./: Cargo.toml  LICENSE  Makefile.toml  README.md
src/: main.rs
src/amm/: amm_note.masm  pool_account.masm
src/asset/: create_asset.masm
src/counter/: counter.masm  note.masm
src/custom_proc/: custom_account.masm  note_script.masm
src/hash/: basic_output_note.masm  calculate_note_hash.masm  calculate_recipient_hash.masm  caller_note.masm  recipient_hash_proc.masm  rpo_test.masm
src/import/: test_import_a.masm  test_import_b.masm
src/lifecycle/: test_account.masm  test_note_script.masm
src/masm/: amm.masm  math.masm  pow.masm  set_item.masm  signed_int.masm  sqrt.masm  test_account.masm  test_import_a.masm  test_note_script.masm
src/math/: amm.masm  exp.masm  log.masm  pow.masm  sqrt.masm  u64.masm
src/modifier/: modifier_account.masm  note.masm
src/note_output/: message_note.masm  note_creator.masm  output_note.masm  output_note_a.masm  output_note_b.masm
src/p2id/: P2ID.masm  test_account.masm  tx_script.masm
src/partial_fill_swap/: SWAPp.masm  user_wallet.masm
src/signed_int/: signed_add.masm  signed_div.masm  signed_int_lib.masm  signed_mul.masm  signed_sub.masm
src/splitter/: asset_note.masm  splitter_account.masm  tx_script.masm
src/storage/: set_item.masm
src/strings/: hello_world.masm  strings.masm
src/swap/: SWAP.masm  swap_account.masm
src/verifiable_computation/: caller_note.masm  message_note.masm  note_creator_consumer.masm  output_consumable_note.masm
tests/: amm_formula_test.rs  custom_proc_test.rs  exp_test.rs  import_test.rs  import_test.rs~  lifecycle_test.rs  lifecycle_test.rs~  log_test.rs  masm_test.rs  math_test.rs  pow_test.rs  set_item2_test.rs  set_item_test.rs  signed_int_add_test.rs  signed_int_div_test.rs  signed_int_lib_test.rs  signed_int_mul_test.rs  signed_int_sub_test.rs  signed_int_test.rs  sqrt_test.rs  tx_debug_mode.rs  tx_procedure_test.rs  u64_masm_test.rs  utils.rs  utils.rs~
tests/integration/: burn_test.rs  (+17 more)
(+52 files in other folders)
